5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1756_1183.log
== SUBMITION (2019-05-29 13:18:28) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.137368
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:22:03) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.474159
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
